<resources>
    <string name="app_name">Alice</string>
    <string name="colors">Colors</string>
    <string name="numbers">Numbers</string>
    <string name="fruits">Fruits</string>
    <string name="vegetable">Vegetables</string>
    <string name="alphabet">Alphabet</string>
    <string name="animals">Animals</string>
    <string name="exercise">Exercise</string>
    <string name="info">Info</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="welcome">Welcome to Alice\'s world</string>
    <string name="lenguage">Witch lenguage are we learning today?</string>
    <string name="english">English</string>
    <string name="italian">Italian</string>

    <!--COLORS-->
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="grey">Grey</string>
    <string name="white">White</string>
    <string name="orange">Orange</string>
    <string name="purple">Purple</string>
    <string name="green">Green</string>
    <string name="brown">Brown</string>
    <string name="pink">Pink</string>
    <string name="light_blue">Light Blue</string>

    <!--VEGETABLES-->
    <string name="asparagus">Asparagus</string>
    <string name="beet">Beet</string>
    <string name="broccoli">Broccoli</string>
    <string name="carot">Carot</string>
    <string name="mais">Corn</string>
    <string name="zucchini">Zucchini</string>
    <string name="eggplant">Eggplant</string>
    <string name="salad">Salad</string>
    <string name="leek">Leek</string>
    <string name="mushroom">Mushroom</string>
    <string name="onion">Onion</string>
    <string name="pepper">Pepper</string>
    <string name="pees">Pees</string>
    <string name="potatoes">Potato</string>
    <string name="pumpkin">Pumpkin</string>


    <!--ANIMALS-->
    <string name="monkey">Monkey</string>
    <string name="owl">Owl</string>
    <string name="parrot">Parrot</string>
    <string name="eagle">Eagle</string>
    <string name="bee">Bee</string>
    <string name="bird">Seagull</string>
    <string name="koala">Koala</string>
    <string name="bat">Bat</string>
    <string name="snake">Snake</string>
    <string name="tiger">Tiger</string>
    <string name="snail">Snail</string>
    <string name="sheep">Sheep</string>
    <string name="pig">Pig</string>
    <string name="cow">Cow</string>
    <string name="bear">Bear</string>


    <!--NUMBERS-->
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>


    <!--FRUITS-->
    <string name="banana">Banana</string>
    <string name="cherry">Cherry</string>
    <string name="coconut">Coconut</string>
    <string name="grapes">Grapes</string>
    <string name="kiwi">Kiwi</string>
    <string name="Apple">Apple</string>
    <string name="Watermelon">Watermelon</string>
    <string name="Melon">Melon</string>
    <string name="Orange">Orange</string>
    <string name="Peach">Peach</string>
    <string name="Pear">Pear</string>
    <string name="blueberries">Blueberries</string>
    <string name="passion_fruit">Passion fruit</string>
    <string name="Pineapple">Pineapple</string>
    <string name="fig">Fig</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_anima_lmain">AnimaLMain</string>
</resources>
